--- a/boletas/nbproject/project.properties
+++ b/boletas/nbproject/project.properties
@@ -1,9 +1,10 @@
 annotation.processing.enabled=true
 annotation.processing.enabled.in.editor=false
-annotation.processing.processor.options=
 annotation.processing.processors.list=
 annotation.processing.run.all.processors=true
 annotation.processing.source.output=${build.generated.sources.dir}/ap-source-output
+application.title=boletas
+application.vendor=gudiel
 build.classes.dir=${build.dir}/classes
 build.classes.excludes=**/*.java,**/*.form
 # This directory is removed when the project is cleaned:
@@ -32,14 +33,25 @@ dist.jar=${dist.dir}/boletas.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 dist.jlink.dir=${dist.dir}/jlink
 dist.jlink.output=${dist.jlink.dir}/boletas
+endorsed.classpath=
 excludes=
-file.reference.google-api-services-webfonts-v1-rev60-1.25.0.jar=../../../../Descargas/webfonts/google-api-services-webfonts-v1-rev60-1.25.0.jar
 file.reference.mysql-connector-java-5.1.23-bin.jar=../lib/mysql-connector-java-5.1.23-bin.jar
+file.reference.RojeruSan.full.jar=../lib/RSLibs/RojeruSan.full.jar
+file.reference.RojeruSan.lib.jar=../lib/RSLibs/RojeruSan.lib.jar
+file.reference.RojeruSan.parte1.jar=../lib/RSLibs/RojeruSan.parte1.jar
+file.reference.RSCalendar_v2.0.jar=../lib/RSLibs/RSCalendar v2.0.jar
+file.reference.RSPanelGradiente.jar=../lib/RSLibs/RSPanelGradiente.jar
+file.reference.RSTableMetro.jar=../lib/RSLibs/RSTableMetro.jar
 includes=**
 jar.compress=false
 javac.classpath=\
     ${file.reference.mysql-connector-java-5.1.23-bin.jar}:\
-    ${file.reference.google-api-services-webfonts-v1-rev60-1.25.0.jar}
+    ${file.reference.RSPanelGradiente.jar}:\
+    ${file.reference.RSTableMetro.jar}:\
+    ${file.reference.RojeruSan.full.jar}:\
+    ${file.reference.RojeruSan.parte1.jar}:\
+    ${file.reference.RojeruSan.lib.jar}:\
+    ${file.reference.RSCalendar_v2.0.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
