--- a/boletas/nbproject/project.properties
+++ b/boletas/nbproject/project.properties
@@ -35,13 +35,13 @@ dist.jlink.dir=${dist.dir}/jlink
 dist.jlink.output=${dist.jlink.dir}/boletas
 endorsed.classpath=
 excludes=
-file.reference.mysql-connector-java-5.1.23-bin.jar=/home/gudiel/NetBeansProjects/lib/mysql-connector-java-5.1.23-bin.jar
-file.reference.RojeruSan.full.jar=/home/gudiel/NetBeansProjects/lib/RSLibs/RojeruSan.full.jar
-file.reference.RojeruSan.lib.jar=/home/gudiel/NetBeansProjects/lib/RSLibs/RojeruSan.lib.jar
-file.reference.RojeruSan.parte1.jar=/home/gudiel/NetBeansProjects/lib/RSLibs/RojeruSan.parte1.jar
-file.reference.RSCalendar_v2.0.jar=/home/gudiel/NetBeansProjects/lib/RSLibs/RSCalendar v2.0.jar
-file.reference.RSPanelGradiente.jar=/home/gudiel/NetBeansProjects/lib/RSLibs/RSPanelGradiente.jar
-file.reference.RSTableMetro.jar=/home/gudiel/NetBeansProjects/lib/RSLibs/RSTableMetro.jar
+file.reference.mysql-connector-java-5.1.23-bin.jar=../lib/mysql-connector-java-5.1.23-bin.jar
+file.reference.RojeruSan.full.jar=../lib/RSLibs/RojeruSan.full.jar
+file.reference.RojeruSan.lib.jar=../lib/RSLibs/RojeruSan.lib.jar
+file.reference.RojeruSan.parte1.jar=../lib/RSLibs/RojeruSan.parte1.jar
+file.reference.RSCalendar_v2.0.jar=../lib/RSLibs/RSCalendar v2.0.jar
+file.reference.RSPanelGradiente.jar=../lib/RSLibs/RSPanelGradiente.jar
+file.reference.RSTableMetro.jar=../lib/RSLibs/RSTableMetro.jar
 includes=**
 jar.compress=false
 javac.classpath=\
