--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,8 @@
 /boletas/nbproject/private/
 /boletas/build/
 /boletas/dist/
+/tablaRender/nbproject/private/
+/tablaRender/build/
+/tablaRender/dist/
+/redimensionar/nbproject/private/
+/redimensionar/build/
